# pdf-bundle-builder

./: .gitattributes  .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: migrate-pypdf.md
.github/workflows/: ci.yml  release-windows.yml
docs/: release-checklist.md
scripts/: generate_demo_assets.py  generate_sample_pdfs.py
src/pdf_merger/: __main__.py  app.py  cli.py  design.py  merge_pdfs.py
tests/: test_merge_and_toc_numbers.py  test_ordering_and_titles.py  test_sanity_sample_input.py
