[project]
name = "pdf-bundle-builder"
version = "0.1.0"
description = "Offline PDF bundle builder"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "customtkinter>=5.2.2",
    "PyPDF2",
    "reportlab",
]

[project.scripts]
pdf-bundle-builder = "pdf_merger.cli:main"

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0",
    "pytest>=8.0",
    "ruff>=0.5.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["pdf_merger"]


[tool.setuptools.packages.find]
where = ["src"]
